objects/Auth_User__c.object
<CustomObject>
    <description>The link between a User and an OAuth session.</description>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Instance_URL__c</fullName>
        <description>The endpoint for the instance to authenticate against</description>
        <label>Instance URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance_User__c</fullName>
        <externalId>true</externalId>
        <label>Instance User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instance</label>
        <referenceTo>Instances__c</referenceTo>
        <relationshipLabel>Auth Users</relationshipLabel>
        <relationshipName>Auth_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_For_Tools__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is For Tools</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Refresh_Token_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Refresh Token Valid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <label>Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Auth_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Auth User</label>
    <nameField>
        <displayFormat>AU-{0000}</displayFormat>
        <label>Auth User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auth Users</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>